@@ -231,6 +231,9 @@ $wgOptionalMessages = array(
 	'variantname-ike-cans',
 	'variantname-ike-latn',
 	'variantname-iu',
+	'variantname-shi-tfng',
+	'variantname-shi-latn',
+	'variantname-shi',
 	'rc-change-size',
 	'resetpass_text',
 	'image_sample',
